--- a/source/less/potato.less
+++ b/source/less/potato.less
@@ -1,7 +1,7 @@
 // out: ../../app/css/potato.css, sourcemap: true, compress: true
 @purple: #6441a5;
-@darkgray: #222;
-@gray: #262626;
+@lightpurple: #b9a3e3;
+@darkgray: #262626;
 @lightgray: #F1F1F1;
 .textShadow(@color) {
     text-shadow: -1px -1px 0 @color, 1px -1px 0 @color, -1px 1px 0 @color, 1px 1px 0 @color;
@@ -23,10 +23,11 @@ html {
     height: 100%;
     body {
         height: 100%;
-        background-color: #191919;
+        background-color: @darkgray;
         color: #fff;
         font: 100% "Open Sans", sans-serif;
-        .textShadow(#000);
+        
+        // .textShadow(#fff);
     }
 }
 .clear {
@@ -59,7 +60,7 @@ html {
         border: 1px solid #000;
         border-bottom: none;
         padding: 2px 8px;
-        background-color: @gray;
+        background-color: @darkgray;
         .name {
             font-weight: 900;
             flex: 1 0 50%;
@@ -83,7 +84,7 @@ html {
     bottom: 20px;
 }
 .main {
-    background-color: #191919;
+    background-color: @darkgray;
     padding: 1px;
     font-size: 1em;
     ul {
@@ -116,7 +117,7 @@ html {
     }
 }
 #logo {
-    border: 4px solid #6551a5;
+    border: 4px solid @purple;
     margin-left: -4px;
     display: flex;
     justify-content: center;
@@ -145,7 +146,7 @@ html {
     bottom: 0;
     right: 0;
     left: 0;
-    background-color: #191919;
+    background-color: @darkgray;
     border: 5px solid @purple;
     z-index: 9999999;
     img {
